option('disable-builtins', type: 'boolean', value: false,
    description: 'Tell the compiler not to generate builtin functions.',
    yield: true)
option('disable-stack-protection', type: 'boolean', value: true,
    description: 'Tell the compiler not to insert stack protection calls.', yield: true)
option('enable-threading', type: 'boolean', value: true, yield: true)
option('enable-pedantic', type: 'boolean', value: false)
option('enable-pedantic-error', type: 'boolean', value: false)
option('use-libc-subproject', type: 'boolean', value: true, yield: true,
    description: 'When true, use the subproject defined in the libc-subproject option. An alternate approach is to override c_stdlib in your cross files.')
option('libc-subproject', type: 'array', 
    value: ['libc', 'libc_dep', 'libc_hosted_native_dep'],
    yield: true, 
    description: 'This array is used in combination with use-libc-subproject. The first entry is the subproject name. The second is the cross-compilation dependency to use. The third value is optional. If used, it is a native dependency to use with native library targets.')
